@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.855 2007-10-12 16:01:11 castaglia Exp $
+$Id: NEWS,v 1.856 2007-10-12 20:40:31 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -40,6 +40,7 @@ CVS
 - Added mod_unique_id contrib module.  See doc/contrib/mod_unique_id.html
   for details.
 - Bug #2990 - TLSCryptoDevice does not work.
+- Bug #2989 - Unable to authenticate users if RadiusUserInfo is not configured.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
